# netrunner-db

./: .gitmodules  README.md  handler.py  langcode.py  main.py  pyproject.toml  schema.py  toolbox.py
result/: factions.csv  formats.csv  rulings.csv  sets.csv  subtypes.csv  types.csv
result/csv/: card_pools.csv  cards.csv  cycles.csv  printings.csv  publishers.csv  restrictions.csv  rotations.csv  rulings.csv  set_types.csv  sets.csv  sides.csv  snapshots.csv
result/json/: card_pools.json  cards.json  cycles.json  factions.json  formats.json  printings.json  publishers.json  restrictions.json  rotations.json  rulings.json  set_types.json  sets.json  sides.json  snapshots.json  subtypes.json  types.json
schema/: card_pools.json  cards.json  cycles.json  factions.json  formats.json  printings.json  restrictions.json  rotations.json  rulings.json  set_types.json  sets.json  sides.json  snapshots.json  subtypes.json  types.json
src/: handler.py  main.py  schema.py  table.py  toolbox.py  transformer.py
