[tool.poetry]
name = "netrunner-db"
version = "0.1.0"
description = "《矩阵潜袭》卡牌数据生成工具"
authors = ["Eric03742 <eric03742@foxmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
